--- a/readme.org
+++ b/readme.org
@@ -13,9 +13,9 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | media-sound/pamxier             |               1.4 |                                                    |
 | net-proxy/clash-premium-bin     |          20220518 | For openrc user. TODO: tun-mode                    |
 | sys-kernel/rog-xanmod-hybrid    |     5.14.3,5.15.1 | Deprecated                                         |
-| sys-power/asusctl               |          4.0.7-r2 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
-| sys-power/power-profiles-daemon |            0.10.1 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
-| sys-power/supergfxctl           |             4.0.4 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
+| sys-power/asusctl               |             4.1.1 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
+| sys-power/power-profiles-daemon |            0.11.1 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
+| sys-power/supergfxctl           |             4.0.5 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
 | sys-power/auto-cpufreq          |             1.9.4 |                                                    |
 | x11-misc/clipmenu               |             6.2.0 |                                                    |
 | x11-misc/polybar-dwm-module     |             3.5.2 |                                                    |
