--- a/readme.org
+++ b/readme.org
@@ -12,6 +12,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-java/oraclejdk-bin          | 1.8.0.351,11.0.16.1 | Support eselect-java                               |
 | media-sound/mpdris2             |                9999 |                                                    |
 | media-sound/pamxier             |                 1.4 |                                                    |
+| net-im/fluffychat-bin           |               1.6.4 | High CPU usage.(unstable)                          |
 | net-im/gtk-qq                   |               0.2.0 | dev-lang/rust::gentoo ~amd64                       |
 | net-proxy/clash-premium-bin     |            20220826 | For openrc user. TODO: tun-mode                    |
 | sys-kernel/rog-xanmod-hybrid    |       5.14.3,5.15.1 | Deprecated                                         |
