--- a/readme.org
+++ b/readme.org
@@ -14,6 +14,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | media-sound/pamxier             |                 1.4 |                                                    |
 | net-im/fluffychat-bin           |               1.6.4 | High CPU usage.(unstable)                          |
 | net-im/gtk-qq                   |               0.2.0 | dev-lang/rust::gentoo ~amd64                       |
+| net-im/schildichat-desktop-bin  |              1.11.8 |                                                    |
 | net-proxy/clash-premium-bin     |            20220826 | For openrc user. TODO: tun-mode                    |
 | sys-kernel/rog-xanmod-hybrid    |       5.14.3,5.15.1 | Deprecated                                         |
 | sys-power/asusctl               |               4.1.1 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
