--- a/readme.org
+++ b/readme.org
@@ -12,6 +12,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-perl/Graph-Easy             |             0.760.0 | Patched chinese.patch                              |
 | dev-java/oraclejdk-bin          | 1.8.0.351,11.0.16.1 | Support eselect-java                               |
 | dev-java/openjdk-bin            |         1.8, 11, 17 | Zulu JDK                                           |
+| media-fonts/lxgw-wenkai-screen  |             1.250.2 |                                                    |
 | media-sound/mpdris2             |                9999 |                                                    |
 | media-sound/pamxier             |                 1.4 |                                                    |
 | media-sound/ytmdesktop          |                9999 |                                                    |
