refactor(app-text/goldendict): pin version 20230422
Signed-off-by: oatiz <iamoatiz@gmail.com>

--- a/readme.org
+++ b/readme.org
@@ -3,25 +3,25 @@ Lyraile's personal Gentoo overlay for testing.
 
 For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENTOO-ZH OVERLAY]] instead.
 ** Available packages
-| Package Name                    |   Available Version | Additional Information                             |
-|---------------------------------+---------------------+----------------------------------------------------|
-| app-emulation/bochs             |               2.7.0 | Converted from [[https://archlinux.org/packages/community/x86_64/bochs][ArchLinux-bochs]]                     |
-| app-text/goldendict             |                9999 | Copied from [[https://github.com/gentoo/qt][qt-overlay]]                             |
-| dev-db/tableplus-bin            |             0.1.186 | Converted from [[https://aur.archlinux.org/packages/tableplus][AUR(tableplus)]]                      |
-| dev-libs/tdlib                  |                 1.8 |                                                    |
-| dev-perl/Graph-Easy             |             0.760.0 | Patched chinese.patch                              |
-| dev-python/python-epc           |               0.0.5 | lsp-bridge                                         |
-| dev-java/oraclejdk-bin          | 1.8.0.351,11.0.16.1 | Support eselect-java                               |
-| dev-java/openjdk-bin            |         1.8, 11, 17 | Zulu JDK                                           |
-| media-fonts/lxgw-wenkai-screen  |             1.250.2 |                                                    |
-| media-sound/mpdris2             |                9999 |                                                    |
-| media-sound/pamxier             |                 1.4 |                                                    |
-| net-im/deepin-wine-wechat       |         3.9.0.28-r3 |                                                    |
-| net-im/schildichat-desktop-bin  |              1.11.8 |                                                    |
-| sys-power/asusctl               |         4.6.0, 9999 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc |
-| sys-power/auto-cpufreq          |               1.9.4 |                                                    |
-| www-apps/camunda-modeler-bin    |               5.9.0 |                                                    |
-| x11-misc/clipmenu               |               6.2.0 |                                                    |
-| x11-misc/envycontrol            |               3.2.0 |                                                    |
-| x11-misc/optimus-manager        |            20220606 |                                                    |
-| x11-misc/polybar-dwm-module     |               3.5.2 |                                                    |
+| Package Name                   |   Available Version | Additional Information                               |
+|--------------------------------+---------------------+------------------------------------------------------|
+| app-emulation/bochs            |               2.7.0 | Converted from [[https://archlinux.org/packages/community/x86_64/bochs][ArchLinux-bochs]]                       |
+| app-text/goldendict            |            20230422 | pin version d0ae253c270a13c77a02199eff059e063e837ab6 |
+| dev-db/tableplus-bin           |             0.1.186 | Converted from [[https://aur.archlinux.org/packages/tableplus][AUR(tableplus)]]                        |
+| dev-libs/tdlib                 |                 1.8 |                                                      |
+| dev-perl/Graph-Easy            |             0.760.0 | Patched chinese.patch                                |
+| dev-python/python-epc          |               0.0.5 | lsp-bridge                                           |
+| dev-java/oraclejdk-bin         | 1.8.0.351,11.0.16.1 | Support eselect-java                                 |
+| dev-java/openjdk-bin           |         1.8, 11, 17 | Zulu JDK                                             |
+| media-fonts/lxgw-wenkai-screen |             1.250.2 |                                                      |
+| media-sound/mpdris2            |                9999 |                                                      |
+| media-sound/pamxier            |                 1.4 |                                                      |
+| net-im/deepin-wine-wechat      |         3.9.0.28-r3 |                                                      |
+| net-im/schildichat-desktop-bin |              1.11.8 |                                                      |
+| sys-power/asusctl              |         4.6.0, 9999 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc   |
+| sys-power/auto-cpufreq         |               1.9.4 |                                                      |
+| www-apps/camunda-modeler-bin   |               5.9.0 |                                                      |
+| x11-misc/clipmenu              |               6.2.0 |                                                      |
+| x11-misc/envycontrol           |               3.2.0 |                                                      |
+| x11-misc/optimus-manager       |            20220606 |                                                      |
+| x11-misc/polybar-dwm-module    |               3.5.2 |                                                      |
