feat(metadata): update

--- a/metadata/md5-cache/sys-kernel/xanmod-kernel-6.1.1
+++ b/metadata/md5-cache/sys-kernel/xanmod-kernel-6.1.1
@@ -1,4 +1,4 @@
-BDEPEND=test? ( dev-tcltk/expect sys-apps/coreutils sys-kernel/dracut sys-fs/e2fsprogs amd64? ( app-emulation/qemu[qemu_softmmu_targets_x86_64] ) arm64? ( app-emulation/qemu[qemu_softmmu_targets_aarch64] ) ppc? ( app-emulation/qemu[qemu_softmmu_targets_ppc] ) ppc64? ( app-emulation/qemu[qemu_softmmu_targets_ppc64] ) x86? ( app-emulation/qemu[qemu_softmmu_targets_i386] ) ) || ( >=dev-lang/python-3.11.1:3.11 >=dev-lang/python-3.10.9:3.10 >=dev-lang/python-3.9.16:3.9 >=dev-lang/python-3.8.16:3.8 ) app-arch/cpio sys-devel/bc sys-devel/flex virtual/libelf app-alternatives/yacc
+BDEPEND=test? ( dev-tcltk/expect sys-apps/coreutils sys-kernel/dracut sys-fs/e2fsprogs amd64? ( app-emulation/qemu[qemu_softmmu_targets_x86_64] ) arm64? ( app-emulation/qemu[qemu_softmmu_targets_aarch64] ) ppc? ( app-emulation/qemu[qemu_softmmu_targets_ppc] ) ppc64? ( app-emulation/qemu[qemu_softmmu_targets_ppc64] ) x86? ( app-emulation/qemu[qemu_softmmu_targets_i386] ) ) || ( >=dev-lang/python-3.12.0_beta1:3.12 >=dev-lang/python-3.11.3:3.11 >=dev-lang/python-3.10.11:3.10 ) app-arch/cpio sys-devel/bc sys-devel/flex virtual/libelf app-alternatives/yacc
 DEFINED_PHASES=compile config configure install postinst postrm preinst prepare prerm pretend setup test
 DESCRIPTION=XanMod lts kernel built with Gentoo patches and cjktty
 EAPI=8
@@ -12,6 +12,6 @@ PDEPEND=>=virtual/dist-kernel-6.1.1
 RDEPEND=virtual/libelf
 RESTRICT=!test? ( test ) test? ( userpriv ) arm? ( test )
 SLOT=edge
-SRC_URI=https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.1.tar.xz https://dev.gentoo.org/~mpagano/genpatches/tarballs/genpatches-6.1-2.base.tar.xz https://dev.gentoo.org/~mpagano/genpatches/tarballs/genpatches-6.1-2.extras.tar.xz https://github.com/xanmod/linux/releases/download/6.1.1-xanmod1/patch-6.1.1-xanmod1.xz https://raw.githubusercontent.com/zhmars/cjktty-patches/master/v6.x/cjktty-6.1.patch
-_eclasses_=multiprocessing	b4e253ab22cef7b1085e9b67c7a3b730	toolchain-funcs	37a4612ce5522df5a100359a8dbc8491	multilib	5ca4e49abed8e3a2f7b56920eadee157	python-utils-r1	1d1b325c00c1d24c564a1b49327ec3c5	python-any-r1	d2955aaac8daaaa69fcc6dc93ed19f29	portability	58227860123d3e8da23290064ce3373e	savedconfig	4011d8d7370446e970e2c92b20a31341	dist-kernel-utils	557a93bd51735200952a735894f6628e	mount-boot	02a45c5e022c08dbc05178522b2772f2	kernel-install	8b73c5cb30e5d76184a7f46acb1a7688	kernel-build	e8aabe0ea0c0ca1de81a0b7357fea0b5
-_md5_=1eb75bd6b2fcad32769e9ce75bfecf1c
+SRC_URI=https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.1.tar.xz https://dev.gentoo.org/~mpagano/dist/genpatches/genpatches-6.1-2.base.tar.xz https://dev.gentoo.org/~mpagano/dist/genpatches/genpatches-6.1-2.extras.tar.xz https://github.com/xanmod/linux/releases/download/6.1.1-xanmod1/patch-6.1.1-xanmod1.xz https://raw.githubusercontent.com/zhmars/cjktty-patches/master/v6.x/cjktty-6.1.patch
+_eclasses_=multiprocessing	b4e253ab22cef7b1085e9b67c7a3b730	toolchain-funcs	513c31b3346458ed1f3878b57da6d61c	multilib	c19072c3cd7ac5cb21de013f7e9832e0	python-utils-r1	a34d5f83235297b76d71eaf8deb53768	python-any-r1	d2955aaac8daaaa69fcc6dc93ed19f29	portability	a74d533f258f1f435be71312558c12f9	savedconfig	8b5f9d995a970e49cd427c55d5840285	dist-kernel-utils	557a93bd51735200952a735894f6628e	mount-boot	3945d351ee3192381911f938f4ee527a	kernel-install	8b73c5cb30e5d76184a7f46acb1a7688	kernel-build	b2c7328d503d1935fbe27ac9f0634c7b
+_md5_=36af1bee28c45edf0afba3332241c3b9
