--- a/metadata/md5-cache/dev-python/nltk-3.8.1
+++ b/metadata/md5-cache/dev-python/nltk-3.8.1
@@ -1,4 +1,4 @@
-BDEPEND=python_targets_python3_11? ( >=dev-lang/python-3.11.3:3.11[sqlite,tk?,xml(+)] ) >=dev-python/gpep517-13[python_targets_python3_11(-)?] >=dev-python/setuptools-67.7.2[python_targets_python3_11(-)?] >=dev-python/wheel-0.40.0[python_targets_python3_11(-)?]
+BDEPEND=app-arch/unzip python_targets_python3_11? ( >=dev-lang/python-3.11.3:3.11[sqlite,tk?,xml(+)] ) >=dev-python/gpep517-13[python_targets_python3_11(-)?] >=dev-python/setuptools-67.7.2[python_targets_python3_11(-)?] >=dev-python/wheel-0.40.0[python_targets_python3_11(-)?]
 DEFINED_PHASES=compile configure install prepare test
 DESCRIPTION=Natural Language Toolkit
 EAPI=8
@@ -11,6 +11,6 @@ PDEPEND=dev-python/nltk-data
 RDEPEND=dev-python/click[python_targets_python3_11(-)?] dev-python/joblib[python_targets_python3_11(-)?] dev-python/regex[python_targets_python3_11(-)?] dev-python/tqdm[python_targets_python3_11(-)?] python_targets_python3_11? ( >=dev-lang/python-3.11.3:3.11[sqlite,tk?,xml(+)] )
 REQUIRED_USE=|| ( python_targets_python3_11 )
 SLOT=0
-SRC_URI=https://files.pythonhosted.org/packages/source/n/nltk/nltk-3.8.1.tar.gz
+SRC_URI=https://files.pythonhosted.org/packages/source/n/nltk/nltk-3.8.1.zip
 _eclasses_=out-of-source-utils	1a9007554652a6e627edbccb3c25a439	multibuild	bddcb51b74f4a76724ff7cf8e7388869	multilib	c19072c3cd7ac5cb21de013f7e9832e0	toolchain-funcs	513c31b3346458ed1f3878b57da6d61c	multiprocessing	b4e253ab22cef7b1085e9b67c7a3b730	ninja-utils	76050953ad5b70d7e09a6ca55558db92	python-utils-r1	a34d5f83235297b76d71eaf8deb53768	python-r1	3c6cd0f418ba702c186a9865b85e704d	distutils-r1	2d32e797ee29a8ffdd452f4a85860666	pypi	6b97d2db40ff6be180030687e6003199
-_md5_=8ad459c0f2e1d34209c8f481396deef8
+_md5_=468dfe4e65201ec5f6d6b545ac6363b0
