--- a/metadata/md5-cache/sys-power/auto-cpufreq-1.9.4
+++ b/metadata/md5-cache/sys-power/auto-cpufreq-1.9.4
@@ -1,17 +1,17 @@
-BDEPEND=python_targets_python3_9? ( >=dev-lang/python-3.9.12:3.9 ) python_targets_python3_10? ( >=dev-lang/python-3.10.4:3.10 ) >=dev-python/gpep517-9[python_targets_python3_9(-)?,python_targets_python3_10(-)?] >=dev-python/setuptools-65.3.0[python_targets_python3_9(-)?,python_targets_python3_10(-)?] dev-python/wheel[python_targets_python3_9(-)?,python_targets_python3_10(-)?]
+BDEPEND=python_targets_python3_10? ( >=dev-lang/python-3.10.11:3.10 ) >=dev-python/gpep517-13[python_targets_python3_10(-)?] >=dev-python/setuptools-67.7.2[python_targets_python3_10(-)?] >=dev-python/wheel-0.40.0[python_targets_python3_10(-)?]
 DEFINED_PHASES=compile configure install prepare test
 DEPEND=dev-python/psutil dev-python/click dev-python/distro
 DESCRIPTION=Automatic CPU speed & power optimizer for Linux
 EAPI=8
 HOMEPAGE=https://github.com/AdnanHodzic/auto-cpufreq
 INHERIT=distutils-r1
-IUSE=python_targets_python3_9 python_targets_python3_10
+IUSE=python_targets_python3_10
 KEYWORDS=~amd64
 LICENSE=GPL-3
-RDEPEND=dev-python/psutil dev-python/click dev-python/distro python_targets_python3_9? ( >=dev-lang/python-3.9.12:3.9 ) python_targets_python3_10? ( >=dev-lang/python-3.10.4:3.10 )
-REQUIRED_USE=|| ( python_targets_python3_9 python_targets_python3_10 )
+RDEPEND=dev-python/psutil dev-python/click dev-python/distro python_targets_python3_10? ( >=dev-lang/python-3.10.11:3.10 )
+REQUIRED_USE=|| ( python_targets_python3_10 )
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://github.com/AdnanHodzic/auto-cpufreq/archive/v1.9.4.tar.gz -> auto-cpufreq-1.9.4.tar.gz
-_eclasses_=multibuild	d26d81f242cb193d899a72bca423d0bd	multiprocessing	b4e253ab22cef7b1085e9b67c7a3b730	toolchain-funcs	441f754fd75cd4fd1fa06fbc17da6144	multilib	5ca4e49abed8e3a2f7b56920eadee157	python-utils-r1	b9fc5e97e886514e5132f50465185401	python-r1	2d51fd03931e743811ce30d198e4dcfd	distutils-r1	8c1ceb6b71a65547b0ea7bc901d906cb
+_eclasses_=out-of-source-utils	1a9007554652a6e627edbccb3c25a439	multibuild	bddcb51b74f4a76724ff7cf8e7388869	multilib	c19072c3cd7ac5cb21de013f7e9832e0	toolchain-funcs	513c31b3346458ed1f3878b57da6d61c	multiprocessing	b4e253ab22cef7b1085e9b67c7a3b730	ninja-utils	76050953ad5b70d7e09a6ca55558db92	python-utils-r1	a34d5f83235297b76d71eaf8deb53768	python-r1	3c6cd0f418ba702c186a9865b85e704d	distutils-r1	2d32e797ee29a8ffdd452f4a85860666
 _md5_=0b8a087c26e40fe855e67fd4b4e2f02a
