--- a/readme.org
+++ b/readme.org
@@ -21,6 +21,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | sys-power/asusctl              |         4.6.0, 9999 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc   |
 | sys-power/auto-cpufreq         |               1.9.4 |                                                      |
 | www-apps/camunda-modeler-bin   |               5.9.0 |                                                      |
+| www-apps/z-library             |                9999 |                                                      |
 | x11-misc/clipmenu              |               6.2.0 |                                                      |
 | x11-misc/envycontrol           |               3.2.0 |                                                      |
 | x11-misc/optimus-manager       |            20220606 |                                                      |
