--- a/readme.org
+++ b/readme.org
@@ -13,7 +13,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-java/openjdk-bin           |         1.8, 11, 17 | Zulu JDK                                             |
 | media-fonts/lxgw-wenkai-screen |             1.250.2 |                                                      |
 | net-im/schildichat-desktop-bin |              1.11.8 |                                                      |
-| sys-power/asusctl              |         4.6.0, 9999 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc   |
+| sys-power/asusctl              |               4.6.0 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc   |
 | sys-power/auto-cpufreq         |               1.9.4 |                                                      |
 | www-apps/camunda-modeler-bin   |               5.9.0 |                                                      |
 | www-apps/z-library             |                9999 |                                                      |
