refactor(pkgcheck): lint

--- a/metadata/md5-cache/media-sound/mpdris2-0.9.1
+++ b/metadata/md5-cache/media-sound/mpdris2-0.9.1
@@ -6,9 +6,11 @@ EAPI=8
 HOMEPAGE=https://github.com/eonpatapon/mpDris2
 INHERIT=python-r1 autotools
 IUSE=python_targets_python3_10 python_targets_python3_11
-KEYWORDS=amd64 ~ppc ~ppc64 x86
+KEYWORDS=amd64
 LICENSE=GPL-3
+RDEPEND=python_targets_python3_10? ( dev-lang/python:3.10 ) python_targets_python3_11? ( dev-lang/python:3.11 )
+REQUIRED_USE=|| ( python_targets_python3_10 python_targets_python3_11 )
 SLOT=0
 SRC_URI=https://github.com/eonpatapon/mpDris2/archive/refs/tags/0.9.1.tar.gz -> mpdris2-0.9.1.tar.gz
 _eclasses_=out-of-source-utils	1a9007554652a6e627edbccb3c25a439	multibuild	30dbf3c5a31db09a19f31ad0a68f2405	multiprocessing	b4e253ab22cef7b1085e9b67c7a3b730	toolchain-funcs	862d337d98edb576796827be2c6b11ca	multilib	c19072c3cd7ac5cb21de013f7e9832e0	python-utils-r1	59e60e9c5cbd3f214d7f1002e798b387	python-r1	8a28fa6d3e3bc96ff8a7eff2badbe71f	gnuconfig	b6b3e92f8b8c996400074b5f61a59256	libtool	9d3a9a889a6fa62ae794f817c156491b	autotools	6ae9a4347149b19a112caa1182d03bde
-_md5_=d2497eb2fffc543324c5af0c51c0de4d
+_md5_=259056b1106304da490fa1502a9e59b0
