--- a/readme.org
+++ b/readme.org
@@ -6,6 +6,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | Package Name                   |   Available Version | Additional Information                               |
 | app-text/goldendict            |            20230422 | pin version d0ae253c270a13c77a02199eff059e063e837ab6 |
 | app-vim/catppuccin             |            20231114 | pin version be4725cfc3fb6ed96f706d9d1bd5baa24d2b048c |
+| app-vim/vim-wayland-clipboard  |            20231114 | pin version 6d0c9f8e7deac8a90c51d4c1e69068cb86361933 |
 | dev-db/tableplus-bin           |             0.1.212 | Converted from [[https://aur.archlinux.org/packages/tableplus][AUR(tableplus)]]                        |
 | dev-dependency/lsp-bridge      |                 0.1 | emacs lsp-bridge runtime requirements                |
 | dev-java/oraclejdk-bin         | 1.8.0.381,11.0.16.1 | Support eselect-java                                 |
