--- a/readme.org
+++ b/readme.org
@@ -15,6 +15,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-perl/Graph-Easy            |             0.760.0 | Patched chinese.patch                                |
 | dev-python/epc                 |               0.0.5 | lsp-bridge                                           |
 | dev-python/py3nvml             |               0.2.7 | lsp-bridge                                           |
+| dev-tex/elegantbook            |                 4.5 |                                                      |
 | gui-apps/cliphist              |               0.4.0 |                                                      |
 | gui-apps/rofi-wayland          |               1.7.5 |                                                      |
 | split-monitor-workspaces       |            20231113 | hyprland plugin                                      |
