--- a/readme.org
+++ b/readme.org
@@ -9,6 +9,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | app-vim/vim-wayland-clipboard  |            20231114 | pin version 6d0c9f8e7deac8a90c51d4c1e69068cb86361933 |
 | dev-db/tableplus-bin           |             0.1.212 | Converted from [[https://aur.archlinux.org/packages/tableplus][AUR(tableplus)]]                        |
 | dev-dependency/lsp-bridge      |                 0.1 | emacs lsp-bridge runtime requirements                |
+| dev-dependency/my-vim-depends  |                 0.1 |                                                      |
 | dev-java/oraclejdk-bin         | 1.8.0.381,11.0.16.1 | Support eselect-java                                 |
 | dev-java/openjdk-bin           |         1.8, 11, 17 | Zulu JDK                                             |
 | dev-libs/tdlib                 |                 1.8 |                                                      |
