--- a/readme.org
+++ b/readme.org
@@ -18,6 +18,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-python/py3nvml             |               0.2.7 | lsp-bridge                                           |
 | dev-python/pyright             |             1.1.342 | from [[https://github.com/leycec/raiagent][raiagent-overlay]]                                |
 | dev-tex/elegantbook            |                 4.5 |                                                      |
+| dev-util/ruff-bin              |               0.1.9 |                                                      |
 | gui-apps/cliphist              |               0.4.0 |                                                      |
 | gui-apps/rofi-wayland          |               1.7.5 |                                                      |
 | split-monitor-workspaces       |            20231113 | hyprland plugin                                      |
