--- a/readme.org
+++ b/readme.org
@@ -24,6 +24,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | split-monitor-workspaces       |            20231113 | hyprland plugin                                      |
 | media-fonts/foundertype-sc     |                 1.0 |                                                      |
 | media-fonts/lxgw-wenkai-screen |             1.250.2 |                                                      |
+| media-fonts/plex-mono-nerd     |            20240120 |                                                      |
 | media-sound/mpdris2            |               0.9.1 |                                                      |
 | net-im/schildichat-desktop-bin |        1.11.30-sc.2 |                                                      |
 | net-proxy/clash-meta           |              1.16.0 | backup gentoo-zh                                     |
