--- a/readme.org
+++ b/readme.org
@@ -26,6 +26,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | media-fonts/lxgw-wenkai-screen |             1.250.2 |                                                      |
 | media-fonts/plex-mono-nerd     |            20240120 |                                                      |
 | media-sound/mpdris2            |               0.9.1 |                                                      |
+| media-sound/ytm-desktop-bin    |            2.0.0-r5 |                                                      |
 | net-im/schildichat-desktop-bin |        1.11.30-sc.2 |                                                      |
 | net-proxy/clash-meta           |              1.16.0 | backup gentoo-zh                                     |
 | sys-boot/etcher-bin            |             1.18.11 |                                                      |
