--- a/readme.org
+++ b/readme.org
@@ -12,6 +12,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-dependency/my-vim-depends  |                 0.1 |                                                      |
 | dev-java/oraclejdk-bin         | 1.8.0.381,11.0.16.1 | Support eselect-java                                 |
 | dev-java/openjdk-bin           |     1.8, 11, 17， 21 | Zulu JDK                                             |
+| dev-lang/amber-bin             |               0.3.1 |                                                      |
 | dev-libs/tdlib                 |                 1.8 |                                                      |
 | dev-perl/Graph-Easy            |             0.760.0 | Patched chinese.patch                                |
 | dev-python/epc                 |               0.0.5 | lsp-bridge                                           |
