--- a/readme.org
+++ b/readme.org
@@ -11,6 +11,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-db/tableplus-bin           |             0.1.212 | Converted from [[https://aur.archlinux.org/packages/tableplus][AUR(tableplus)]]                        |
 | dev-dependency/lsp-bridge      |                 0.1 | emacs lsp-bridge runtime requirements                |
 | dev-dependency/my-vim-depends  |                 0.1 |                                                      |
+| dev-java/google-java-format    |              1.22.0 |                                                      |
 | dev-java/oraclejdk-bin         | 1.8.0.381,11.0.16.1 | Support eselect-java                                 |
 | dev-java/openjdk-bin           |    1.8, 11, 17， 21 | Zulu JDK                                             |
 | dev-lang/amber-bin             |               0.3.3 |                                                      |
