--- a/readme.org
+++ b/readme.org
@@ -25,6 +25,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-util/ruff-bin              |               0.1.9 |                                                      |
 | gui-apps/cliphist              |               0.4.0 |                                                      |
 | gui-apps/rofi-wayland          |               1.7.5 |                                                      |
+| gui-wm/niri                    |               0.1.7 |                                                      |
 | split-monitor-workspaces       |            20231113 | hyprland plugin                                      |
 | media-fonts/foundertype-sc     |                 1.0 |                                                      |
 | media-fonts/lxgw-wenkai-screen |             1.250.2 |                                                      |
