--- a/readme.org
+++ b/readme.org
@@ -23,6 +23,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | dev-tex/elegantbook            |                 4.5 |                                                      |
 | dev-util/prettier              |               3.3.2 |                                                      |
 | dev-util/ruff-bin              |               0.1.9 |                                                      |
+| dev-util/shfmt-bin             |               3.8.0 |                                                      |
 | gui-apps/cliphist              |               0.4.0 |                                                      |
 | gui-apps/rofi-wayland          |               1.7.5 |                                                      |
 | gui-wm/niri                    |               0.1.7 |                                                      |
