--- a/readme.org
+++ b/readme.org
@@ -37,6 +37,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | net-im/schildichat-desktop-bin |        1.11.36-sc.3 |                                                      |
 | net-misc/apifox-bin            |               2.5.0 |                                                      |
 | net-proxy/clash-meta           |              1.16.0 | backup gentoo-zh                                     |
+| net-proxy/dae                  |                9999 | mzz/reality branch                                   |
 | sci-libs/intel-oneapi-openmp   |            2023.2.0 | 49495                                                |
 | sys-boot/etcher-bin            |             1.18.11 |                                                      |
 | sys-power/asusctl              |           4.7.0_rc2 | Copied From [[https://lab.retarded.farm/zappel/zGentoo][zGenoo-overlay]], add support for openrc   |
