--- a/readme.org
+++ b/readme.org
@@ -36,6 +36,7 @@ For some packages you'd better use [[https://github.com/microcai/gentoo-zh][GENT
 | media-sound/ytm-desktop-bin    |            2.0.0-r5 |                                                      |
 | net-im/schildichat-desktop-bin |        1.11.36-sc.3 |                                                      |
 | net-misc/apifox-bin            |               2.5.0 |                                                      |
+| net-proxy/charles              |               4.6.7 |                                                      |
 | net-proxy/clash-meta           |              1.16.0 | backup gentoo-zh                                     |
 | net-proxy/dae                  |                9999 | mzz/reality branch                                   |
 | sci-libs/intel-oneapi-openmp   |            2023.2.0 | 49495                                                |
